fixed contact mobile buttons after scrollbar change

--- a/styles/contactDetails.css
+++ b/styles/contactDetails.css
@@ -170,8 +170,8 @@
   position: absolute;
   width: 56px;
   height: 56px;
-  top: calc(100vh - 300px);
-  right: 15px;
+  top: calc(100dvh - 248px);
+  left: calc(100dvw - 85px);
   padding: 12px;
   gap: 10px;
   border-radius: 46px;
